Added a BWT class.

--- a/Bioinformatics_2022_CSE_C.ipynb
+++ b/Bioinformatics_2022_CSE_C.ipynb
@@ -6,7 +6,7 @@
       "name": "Bioinformatics 2022 CSE-C",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNzCsk6lIPqouxrcoTirVMy",
+      "authorship_tag": "ABX9TyMKVQpifTkwfMNCZJykGbrb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,14 +62,14 @@
       "metadata": {
         "id": "-W6-d76KrjAT"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#@title Generate Reference Genome { vertical-output: true, display-mode: \"form\" }\n",
-        "length_of_genome = 10000 #@param {type:\"integer\"}\n",
+        "length_of_genome = 20 #@param {type:\"integer\"}\n",
         "\n",
         "generate_Random_Reference_Genome( length_of_genome )\n"
       ],
@@ -78,9 +78,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "94d2ca0c-67d0-4cf0-cd89-ff6b9960442a"
+        "outputId": "37c333fc-5aaf-4e7f-9cf3-dd7a4f07f60e"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,10 +146,22 @@
         "create_Sample_Genome( variance_of_sample_genome )"
       ],
       "metadata": {
-        "id": "PT_qP0Q-iMmd"
+        "id": "PT_qP0Q-iMmd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "04a57097-5c5d-4aa5-eb94-b2f172890304"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Number of dissimilarities =  1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -190,7 +202,7 @@
         "    print( \" Number of reads produced = \" , count )"
       ],
       "metadata": {
-        "id": "ZmA8sv-HbV2v"
+        "id": "Yx-a9z-hrFB4"
       },
       "execution_count": null,
       "outputs": []
@@ -259,7 +271,7 @@
         },
         "outputId": "3b9f47e0-ca7e-4dc8-f1ef-ba49e30ef757"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,7 +331,7 @@
         },
         "outputId": "3ff6f385-88ad-4c51-a644-423c7c0edf1c"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +387,7 @@
         },
         "outputId": "d328561f-679f-439a-99a9-b488198a866c"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,6 +397,88 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## BWT Class"
+      ],
+      "metadata": {
+        "id": "E67gkBZ1nBaQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Burrows_Wheelers :\n",
+        "\n",
+        "    offsets = None\n",
+        "\n",
+        "    def __init__( self , file_name = \"reference_genome\" ) :\n",
+        "        self.genome = open( file_name , \"r\" ).read() + \"$\"\n",
+        "        self.length = len( self.genome )\n",
+        "        self.l_col , self.r_col = self.create_BWT()\n",
+        "        self.rank , self.skip , self.select = self.generate_Rank_Select_Skip()\n",
+        "\n",
+        "    def create_BWT( self ) :\n",
+        "        l = \"\"\n",
+        "        r = \"\"\n",
+        "        self.offsets = [ i for i in range( self.length ) ]\n",
+        "        self.offsets.sort( key = lambda i : self.genome[i:] + self.genome[:i] )\n",
+        "        for i in self.offsets :\n",
+        "            rotation = self.genome[i:] + self.genome[:i]\n",
+        "            l += rotation[0]\n",
+        "            r += rotation[-1:]\n",
+        "        return l , r\n",
+        "\n",
+        "    def generate_Rank_Select_Skip( self ) :\n",
+        "        rank = { \"$\" : [] , \"A\" : [] , \"C\" : [] , \"G\" : [] , \"T\" : [] }\n",
+        "        temp_ranks = { \"$\" : -1 , \"A\" : -1 , \"C\" : -1 , \"G\" : -1 , \"T\" : -1 }\n",
+        "        skip = { \"$\" : 0 , \"A\" : 0 , \"C\" : 0 , \"G\" : 0 , \"T\" : 0 }\n",
+        "        select = { \"$\" : [] , \"A\" : [] , \"C\" : [] , \"G\" : [] , \"T\" : [] }\n",
+        "        \n",
+        "        for base in self.r_col :\n",
+        "            temp_ranks[base] += 1\n",
+        "            for ch in [ \"$\" , \"A\" , \"C\" , \"G\" , \"T\" ] :\n",
+        "                rank[ch].append( temp_ranks[ch] )\n",
+        "        prev = \"$\"\n",
+        "        for curr in [ \"A\" , \"C\" , \"G\" , \"T\" ] :\n",
+        "            skip[curr] = temp_ranks[prev] + skip[prev] + 1\n",
+        "            prev = curr\n",
+        "        for i in range( self.length ) :\n",
+        "            select[ self.r_col[i] ].append( i )\n",
+        "        return rank , skip , select\n",
+        "\n",
+        "    def suffix( self , index = 0 ) :\n",
+        "        if ( index < 0 or index >= self.length ) :\n",
+        "            return None\n",
+        "        if index is 0 :\n",
+        "            index +=1\n",
+        "        sfx = \"\"\n",
+        "        offset = 0\n",
+        "        while index < self.length :\n",
+        "            base = self.r_col[ offset ]\n",
+        "            sfx = base + sfx\n",
+        "            offset = self.skip[ base ] + self.rank[ base ][ offset ]\n",
+        "            index += 1\n",
+        "        return sfx"
+      ],
+      "metadata": {
+        "id": "3zbhCg0GnAgx"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bwt = Burrows_Wheelers()"
+      ],
+      "metadata": {
+        "id": "xIdPD8fAXyMk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
