Read Matching Introduced.

--- a/Bioinformatics_2022_CSE_C.ipynb
+++ b/Bioinformatics_2022_CSE_C.ipynb
@@ -6,7 +6,7 @@
       "name": "Bioinformatics 2022 CSE-C",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMKVQpifTkwfMNCZJykGbrb",
+      "authorship_tag": "ABX9TyODSbLgQToQPN7V3lNwFSVv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,27 +69,15 @@
       "cell_type": "code",
       "source": [
         "#@title Generate Reference Genome { vertical-output: true, display-mode: \"form\" }\n",
-        "length_of_genome = 20 #@param {type:\"integer\"}\n",
+        "length_of_genome = 10000 #@param {type:\"integer\"}\n",
         "\n",
         "generate_Random_Reference_Genome( length_of_genome )\n"
       ],
       "metadata": {
-        "id": "4eDL5Nbkbvv9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "37c333fc-5aaf-4e7f-9cf3-dd7a4f07f60e"
+        "id": "4eDL5Nbkbvv9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Generation Complete!!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -146,22 +134,10 @@
         "create_Sample_Genome( variance_of_sample_genome )"
       ],
       "metadata": {
-        "id": "PT_qP0Q-iMmd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "04a57097-5c5d-4aa5-eb94-b2f172890304"
+        "id": "PT_qP0Q-iMmd"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Number of dissimilarities =  1\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -265,22 +241,10 @@
         "burrows_wheeler()"
       ],
       "metadata": {
-        "id": "N12082LXloYI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3b9f47e0-ca7e-4dc8-f1ef-ba49e30ef757"
+        "id": "N12082LXloYI"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "BWT Produced !!!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -325,22 +289,10 @@
         "generate_Rank_Select_Skip()"
       ],
       "metadata": {
-        "id": "lyCKjVjgbIzH",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3ff6f385-88ad-4c51-a644-423c7c0edf1c"
+        "id": "lyCKjVjgbIzH"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "rank , select , skip generated!!!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -381,22 +333,10 @@
         "reverse_BWT()"
       ],
       "metadata": {
-        "id": "Mf05RvLAbY9J",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d328561f-679f-439a-99a9-b488198a866c"
+        "id": "Mf05RvLAbY9J"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "BWT reversal successful !!!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -420,6 +360,18 @@
         "        self.l_col , self.r_col = self.create_BWT()\n",
         "        self.rank , self.skip , self.select = self.generate_Rank_Select_Skip()\n",
         "\n",
+        "    def __iter__( self ) :\n",
+        "        self.iterate_base = 0\n",
+        "        return self\n",
+        "\n",
+        "    def __next__( self ) :\n",
+        "        if self.iterate_base < self.length :\n",
+        "            current_base = self.iterate_base\n",
+        "            self.iterate_base += 1\n",
+        "            return self.r_col[ current_base ]\n",
+        "        else :\n",
+        "            raise StopIteration\n",
+        "\n",
         "    def create_BWT( self ) :\n",
         "        l = \"\"\n",
         "        r = \"\"\n",
@@ -433,17 +385,19 @@
         "\n",
         "    def generate_Rank_Select_Skip( self ) :\n",
         "        rank = { \"$\" : [] , \"A\" : [] , \"C\" : [] , \"G\" : [] , \"T\" : [] }\n",
-        "        temp_ranks = { \"$\" : -1 , \"A\" : -1 , \"C\" : -1 , \"G\" : -1 , \"T\" : -1 }\n",
         "        skip = { \"$\" : 0 , \"A\" : 0 , \"C\" : 0 , \"G\" : 0 , \"T\" : 0 }\n",
         "        select = { \"$\" : [] , \"A\" : [] , \"C\" : [] , \"G\" : [] , \"T\" : [] }\n",
         "        \n",
-        "        for base in self.r_col :\n",
-        "            temp_ranks[base] += 1\n",
-        "            for ch in [ \"$\" , \"A\" , \"C\" , \"G\" , \"T\" ] :\n",
-        "                rank[ch].append( temp_ranks[ch] )\n",
+        "        for ch in [ \"$\" , \"A\" , \"C\" , \"G\" , \"T\" ] :\n",
+        "            temp = 0\n",
+        "            for base in self.r_col :\n",
+        "                rank[ch].append( temp )\n",
+        "                if( base is ch ) :\n",
+        "                    temp += 1\n",
+        "            rank[ch].append( temp )\n",
         "        prev = \"$\"\n",
         "        for curr in [ \"A\" , \"C\" , \"G\" , \"T\" ] :\n",
-        "            skip[curr] = temp_ranks[prev] + skip[prev] + 1\n",
+        "            skip[curr] = rank[prev][self.length] + skip[prev]\n",
         "            prev = curr\n",
         "        for i in range( self.length ) :\n",
         "            select[ self.r_col[i] ].append( i )\n",
@@ -452,8 +406,7 @@
         "    def suffix( self , index = 0 ) :\n",
         "        if ( index < 0 or index >= self.length ) :\n",
         "            return None\n",
-        "        if index is 0 :\n",
-        "            index +=1\n",
+        "        index +=1\n",
         "        sfx = \"\"\n",
         "        offset = 0\n",
         "        while index < self.length :\n",
@@ -461,12 +414,26 @@
         "            sfx = base + sfx\n",
         "            offset = self.skip[ base ] + self.rank[ base ][ offset ]\n",
         "            index += 1\n",
-        "        return sfx"
+        "        return sfx\n",
+        "\n",
+        "    def match( self , read ) :\n",
+        "        top = 0\n",
+        "        bot = self.length\n",
+        "        i = len( read ) - 1\n",
+        "        while i >= 0 and top < bot :\n",
+        "            base = read[ i ]\n",
+        "            top = self.skip[ base ] + self.rank[ base ][ top ]\n",
+        "            bot = self.skip[ base ] + self.rank[ base ][ bot ]\n",
+        "            i -= 1\n",
+        "        index = []\n",
+        "        for x in range( top , bot ) :\n",
+        "            index.append( self.offsets[x] )\n",
+        "        return index"
       ],
       "metadata": {
         "id": "3zbhCg0GnAgx"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
